support upload logo

--- a/app/views/factory/admin/scenes/_form.html.erb
+++ b/app/views/factory/admin/scenes/_form.html.erb
@@ -1,5 +1,6 @@
 <%= render 'error_messages', target: f.object %>
 <%= f.text_field :title %>
+<%= f.file_field :logo %>
 <%= f.text_field :book_start_days %>
 <div class="field is-horizontal">
   <%= f.label :book_start_at %>
