--- a/app/views/factory/products/_index/_taxon.html.erb
+++ b/app/views/factory/products/_index/_taxon.html.erb
@@ -7,7 +7,7 @@
         <% end %>
       </div>
       <div class="weui-half-screen-dialog__hd__main">
-        <div class="weui-half-screen-dialog__title"><%= t('factory.product_taxons.index.title') %></div>
+        <div class="weui-half-screen-dialog__title"><%= t('factory.produce_plans.index.title') %></div>
       </div>
       <div class="weui-half-screen-dialog__hd__side">
         <button class="weui-icon-btn" data-action="weui-dialog#close">
@@ -16,13 +16,8 @@
       </div>
     </div>
     <div class="weui-half-screen-dialog__bd">
-      <div class="weui-grids">
-      <% @product_taxons.each do |product_taxon| %>
-        <%= link_to({ controller: 'products', product_taxon_id: product_taxon.id }, class: 'weui-grid') do %>
-          <div class="weui-grid__icon"><%= image_tag product_taxon.logo if product_taxon.logo.attached? %></div>
-          <p class="weui-grid__label"><%= product_taxon.name %></p>
-        <% end %>
-      <% end %>
+      <div class="columns as-border is-flex m-0 p-4">
+        <%= render partial: 'factory/produce_plans/produce_plan', collection: @produce_plans, as: :model %>
       </div>
     </div>
     <div class="weui-half-screen-dialog__ft"></div>
