--- a/app/views/factory/produce_plans/index.html+phone.erb
+++ b/app/views/factory/produce_plans/index.html+phone.erb
@@ -6,7 +6,7 @@
     <span><%= produce_on.to_s(:week) %></span>
   </div>
   <div class="weui-panel__bd">
-    <div class="columns as-border is-flex m-0 p-4">
+    <div class="columns is-multiline as-border is-flex m-0 p-4">
       <%= render partial: 'produce_plan', collection: produce_plans, as: :model %>
     </div>
   </div>
