--- a/app/views/factory/admin/productions/_index_tr.html.erb
+++ b/app/views/factory/admin/productions/_index_tr.html.erb
@@ -20,7 +20,10 @@
       <%= button_to({ action: 'destroy', id: model.id }, method: :delete, data: { confirm: t('.confirm') }, aria: { label: t('.destroy') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-light fa-trash"></i>
       <% end %>
-      <%= link_to t('factory.admin.production_plans.index.title'), { controller: 'production_plans', production_id: model.id }, class: 'button is-small is-success' %>
+      <%= link_to({ controller: 'production_plans', production_id: model.id }, class: 'button is-small is-rounded is-info') do %>
+        <i class="fa-light fa-list-timeline"></i>
+        <span><%= t('factory.admin.production_plans.index.title') %></span>
+      <% end %>
     </span>
   </td>
 </tr>
