--- a/app/views/factory/admin/products/_index/_index_tbody.html+phone.erb
+++ b/app/views/factory/admin/products/_index/_index_tbody.html+phone.erb
@@ -1,21 +1,8 @@
-<div class="weui-form-preview__item">
-  <label class="weui-form-preview__label"><%= Factory::Product.human_attribute_name(:name) %></label>
-  <span class="weui-form-preview__value"><%= link_to model.name, { action: 'show', id: model.id }, text: true %></span>
-</div>
-
-<td><%= image_tag model.logo.variant(resize_to_limit: [80, 80]), class: 'image is-64x64' if model.logo.attached? %></td>
-<td>
-  <%= render 'com/attachments/list_many', target: model.covers %>
-</td>
-<td><%= model.qr_prefix %></td>
-<td><%= model.profit_margin_str %></td>
-<td>
+<strong class="weui-media-box__title"><%= link_to model.name, { action: 'show', id: model.id }, text: true %></strong>
+<p class="weui-media-box__desc"><%= image_tag model.logo.variant(resize_to_limit: [80, 80]), class: 'image is-64x64' if model.logo.attached? %></p>
+<p class="weui-media-box__desc"><%= model.qr_prefix %></p>
+<p class="weui-media-box__desc"><%= model.profit_margin_str %></p>
+<div class="weui-media-box__desc">
   <p><%= model.min_price.to_money.format(html_wrap: true).html_safe %></p>
   <p><%= model.max_price.to_money.format(html_wrap: true).html_safe %></p>
-</td>
-<td>
-  <%= form_with theme: nil, model: model, url: { action: 'update', id: model.id }, data: { controller: 'input' } do |f| %>
-    <%= f.check_box :enabled, data: { input_target: 'checkbox' }, id: nil, class: 'switch is-rounded' %>
-    <label data-action="click->input#check"></label>
-  <% end %>
-</td>
+</div>
