--- a/app/views/factory/admin/produce_plans/_show_table.html.erb
+++ b/app/views/factory/admin/produce_plans/_show_table.html.erb
@@ -3,12 +3,8 @@
   <td><%= @produce_plan.title %></td>
 </tr>
 <tr>
-  <td class="has-text-right"><%= Factory::ProducePlan.human_attribute_name(:start_at) %></td>
-  <td><time data-controller="time"><%= @produce_plan.start_at.to_s(:rfc822) %></time></td>
-</tr>
-<tr>
-  <td class="has-text-right"><%= Factory::ProducePlan.human_attribute_name(:finish_at) %></td>
-  <td><time data-controller="time"><%= @produce_plan.finish_at.to_s(:rfc822) %></time></td>
+  <td class="has-text-right"><%= Factory::ProducePlan.human_attribute_name(:produce_on) %></td>
+  <td><%= @produce_plan.produce_on.to_s(:date) %></td>
 </tr>
 <tr>
   <td class="has-text-right"><%= Factory::ProducePlan.human_attribute_name(:state) %></td>
