--- a/app/views/factory/admin/scenes/_show_table.html.erb
+++ b/app/views/factory/admin/scenes/_show_table.html.erb
@@ -8,7 +8,7 @@
 </tr>
 <tr>
   <td class="has-text-right"><%= Factory::Scene.human_attribute_name(:book_start_at) %></td>
-  <td><%= @scene.book_start_at %></td>
+  <td><%= @scene.book_start_at.to_s(:time) %></td>
 </tr>
 <tr>
   <td class="has-text-right"><%= Factory::Scene.human_attribute_name(:book_finish_days) %></td>
@@ -16,13 +16,13 @@
 </tr>
 <tr>
   <td class="has-text-right"><%= Factory::Scene.human_attribute_name(:book_finish_at) %></td>
-  <td><%= @scene.book_finish_at %></td>
+  <td><%= @scene.book_finish_at.to_s(:time) %></td>
 </tr>
 <tr>
   <td class="has-text-right"><%= Factory::Scene.human_attribute_name(:deliver_start_at) %></td>
-  <td><%= @scene.deliver_start_at %></td>
+  <td><%= @scene.deliver_start_at.to_s(:time) %></td>
 </tr>
 <tr>
   <td class="has-text-right"><%= Factory::Scene.human_attribute_name(:deliver_finish_at) %></td>
-  <td><%= @scene.deliver_finish_at %></td>
+  <td><%= @scene.deliver_finish_at.to_s(:time) %></td>
 </tr>
