--- a/app/views/factory/admin/production_plans/_index/_index_thead.html.erb
+++ b/app/views/factory/admin/production_plans/_index/_index_thead.html.erb
@@ -7,6 +7,6 @@
 <th><%= Factory::ProductionPlan.human_attribute_name(:state) %></th>
 <th>
   <p><%= Factory::ProductionPlan.human_attribute_name(:planned_count) %></p>
-  <p><%= Factory::ProductionPlan.human_attribute_name(:produced_count) %></p>
+  <p><%= Factory::ProductionPlan.human_attribute_name(:production_items_count) %></p>
 </th>
 <th></th>
