--- a/app/views/factory/admin/product_taxons/_form.html.erb
+++ b/app/views/factory/admin/product_taxons/_form.html.erb
@@ -1,4 +1,4 @@
-<%= render 'error_messages', target: @product_taxon %>
+<%= render 'error_messages', target: f.object %>
 <%= render partial: 'com/nodes/siblings_select', locals: { f: f } %>
 <%= f.text_field :name %>
 <%= f.file_field :logo %>
