--- a/app/views/factory/admin/product_taxons/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/product_taxons/_index/_index_tbody.html.erb
@@ -1,6 +1,8 @@
-<td><i class="fa-light fa-bars fa-fw has-text-grey is-drawable"></i></td>
+<td>
+  <i class="fa-light fa-bars fa-fw has-text-grey is-drawable"></i>
+  <span><%= model.name %></span>
+</td>
 <td><%= link_to model.factory_taxon.name, { controller: 'factory_taxons', action: 'show', id: model.factory_taxon_id }, text: true if model.factory_taxon %></td>
-<td><%= model.name %></td>
 <td><%= image_tag model.logo, class: 'image is-32x32' if model.logo.attached? %></td>
 <td><%= model.products.where(enabled: true).count %></td>
 <th>
