--- a/app/views/factory/admin/product_taxons/_index/_index_thead.html.erb
+++ b/app/views/factory/admin/product_taxons/_index/_index_thead.html.erb
@@ -1,5 +1,6 @@
 <th><%= Factory::ProductTaxon.human_attribute_name(:name) %></th>
 <th><%= Factory::ProductTaxon.human_attribute_name(:factory_taxon_id) %></th>
+<th><%= Factory::ProductTaxon.human_attribute_name(:scene_id) %></th>
 <th><%= Factory::ProductTaxon.human_attribute_name(:logo) %></th>
 <th>已上架</th>
 <th><%= Factory::ProductTaxon.human_attribute_name(:enabled) %></th>
