--- a/app/views/factory/admin/product_taxons/_form.html.erb
+++ b/app/views/factory/admin/product_taxons/_form.html.erb
@@ -2,4 +2,5 @@
 <%= render partial: 'com/nodes/siblings_select', locals: { f: f } %>
 <%= f.text_field :name %>
 <%= f.file_field :logo %>
-<%= f.collection_select :factory_taxon_id, Factory::FactoryTaxon.all, :id, :name %>
+<%= f.collection_select :factory_taxon_id, @factory_taxons, :id, :name %>
+<%= f.collection_select :scene_id, @scenes, :id, :title %>
