--- a/app/views/factory/products/_index/_taxon.html.erb
+++ b/app/views/factory/products/_index/_taxon.html.erb
@@ -22,7 +22,7 @@
     </div>
     <div class="weui-half-screen-dialog__bd">
       <div class="columns as-border is-flex m-0 p-4">
-        <%= render partial: 'factory/produce_plans/produce_plan', collection: @produce_plans, as: :model %>
+        <%= render partial: 'produce_plan', collection: @produce_plans, as: :model %>
       </div>
     </div>
     <div class="weui-half-screen-dialog__ft"></div>
