--- a/app/views/factory/products/_index/_taxon.html.erb
+++ b/app/views/factory/products/_index/_taxon.html.erb
@@ -1,30 +1,3 @@
 <div data-controller="weui-dialog" id="dialog" style="display: none; opacity: 0">
-  <div class="weui-half-screen-dialog" data-weui-dialog-target="dialog">
-    <div class="weui-half-screen-dialog__hd">
-      <div class="weui-half-screen-dialog__hd__side">
-        <%= link_to({ action: 'index', produce_on: @produce_plan.produce_on - 1 }) do %>
-          <i class="fa-solid fa-chevron-left has-text-info"></i>
-          <span>前一天</span>
-        <% end %>
-      </div>
-      <div class="weui-half-screen-dialog__hd__main">
-        <div class="weui-half-screen-dialog__title">
-          <span><%= extra_distance_date(Date.today, @produce_plan.produce_on) %></span>
-          <span><%= @produce_plan.produce_on %></span>
-        </div>
-      </div>
-      <div class="weui-half-screen-dialog__hd__side">
-        <%= link_to({ action: 'index', produce_on: @produce_plan.produce_on + 1 }) do %>
-          <span>后一天</span>
-          <i class="fa-solid fa-chevron-right has-text-info"></i>
-      <% end %>
-      </div>
-    </div>
-    <div class="weui-half-screen-dialog__bd">
-      <div class="columns as-border is-flex m-0 p-4">
-        <%= render partial: 'produce_plan', collection: @produce_plans, as: :model %>
-      </div>
-    </div>
-    <div class="weui-half-screen-dialog__ft"></div>
-  </div>
+  <%= render 'dialog' %>
 </div>
