--- a/app/views/factory/products/index.html+phone.erb
+++ b/app/views/factory/products/index.html+phone.erb
@@ -1,7 +1,7 @@
 <%= render 'breadcrumb' %>
 
 <div class="weui-flex is-align-items-flex-start">
-  <%= render 'menu' %>
+  <%= render 'menu' unless params[:produce_plan_id] %>
   <div class="weui-panel weui-panel_access mt-0 weui-flex__item" data-controller="page" data-page-debug-value="true" data-action="touchmove->page#move:passive">
     <div class="weui-panel__bd">
       <%= render partial: 'product', collection: @products, as: :model %>
