--- a/app/views/factory/admin/produce_on/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/produce_on/_index/_index_tbody.html.erb
@@ -1,2 +1,9 @@
-<td><%= model %></td>
+<td><%= model[0] %></td>
+<td>
+<% model[1].each do |produce_plan| %>
+  <div class="level">
+    <div class="level-item"><%= produce_plan.scene.title %></div>
+  </div>
+<% end %>
+</td>
 <td></td>
