--- a/app/views/factory/admin/produce_on/index.html.erb
+++ b/app/views/factory/admin/produce_on/index.html.erb
@@ -1,3 +1,3 @@
 <%= render layout: 'index_table' do %>
-  <%= render partial: 'index_tbody', layout: 'index_tr', collection: @produce_ons, as: :model %>
+  <%= render partial: 'index_tbody', layout: 'index_tr', collection: @produce_plans, as: :model %>
 <% end %>
