--- a/app/views/factory/admin/produce_plans/_products/_index_tbody.html.erb
+++ b/app/views/factory/admin/produce_plans/_products/_index_tbody.html.erb
@@ -1,5 +1,9 @@
-<td><%= link_to model.name, { action: 'show', id: model.id }, text: true %></td>
-<td><%= image_tag model.logo.variant(resize_to_limit: [80, 80]), class: 'image is-64x64' if model.logo.attached? %></td>
+<td>
+  <div class="is-several">
+    <%= image_tag model.logo.variant(resize_to_limit: [80, 80]), class: 'image is-32x32' if model.logo.attached? %>
+    <%= link_to model.name, { action: 'show', id: model.id }, text: true %>
+  </div>
+</td>
 <td><%= model.qr_prefix %></td>
 <td><%= model.profit_margin_str %></td>
 <td>
