--- a/app/views/factory/admin/produce_plans/_products/_index_thead.html.erb
+++ b/app/views/factory/admin/produce_plans/_products/_index_thead.html.erb
@@ -1,15 +1,5 @@
-<th>
-  <%= Factory::Product.human_attribute_name(:product_taxon_id) %>
-  <%= link_to({ controller: 'product_taxons' }, aria: { label: '分类设置' }) do %>
-    <i class="fa-light fa-cog"></i>
-  <% end %>
-</th>
 <th><%= Factory::Product.human_attribute_name(:name) %></th>
-<th><%= Factory::Product.human_attribute_name(:qr_prefix) %></th>
-<th><%= Factory::Product.human_attribute_name(:profit_margin) %></th>
-<th>
-  <p><%= Factory::Product.human_attribute_name(:min_price) %></p>
-  <p><%= Factory::Product.human_attribute_name(:max_price) %></p>
-</th>
+<th><%= Factory::Production.human_attribute_name(:name) %></th>
+<th><%= Factory::Production.human_attribute_name(:price) %></th>
 <th><%= Factory::Product.human_attribute_name(:enabled) %></th>
 <th></th>
