--- a/app/views/factory/admin/produce_plans/_products/_index_tbody.html.erb
+++ b/app/views/factory/admin/produce_plans/_products/_index_tbody.html.erb
@@ -1,8 +1,22 @@
+<% production_plan = @production_plans.find(&->(i){ i.production_id == model.id }) %>
 <td><%= link_to model.name, { action: 'show', id: model.id }, text: true %></td>
 <td><%= model.price.to_money.format(html_wrap: true).html_safe %></td>
 <td>
-  <%= form_with theme: nil, model: model, url: { action: 'update', id: model.id }, data: { controller: 'input' } do |f| %>
-    <%= f.check_box :enabled, data: { input_target: 'checkbox' }, id: nil, class: 'switch is-rounded' %>
-    <label data-action="click->input#check"></label>
-  <% end %>
+  <div class="is-flex is-align-items-center">
+    <%= button_to({ controller: 'production_plans', action: 'update', production_id: model.id, id: production_plan.id }, method: :patch, params: { '[production_plan]planned_count': production_plan.planned_count - 1 }, class: 'mr-1') do %>
+      <i class="fa-solid fa-circle-minus fa-2x"></i>
+    <% end if production_plan && production_plan.planned_count > 1 %>
+    <%= button_to({ controller: 'production_plans', action: 'destroy', production_id: model.id, id: production_plan.id }, method: :delete, class: 'mr-1') do %>
+      <i class="fa-solid fa-circle-minus fa-2x"></i>
+    <% end if production_plan && production_plan.planned_count <= 1 %>
+    <%= form_with(theme: nil, scope: 'production_plan', url: { controller: 'production_plans', action: 'update', production_id: model.id, id: production_plan.id }, method: :patch, data: { controller: 'input' }) do |f| %>
+      <%= f.number_field :planned_count, value: production_plan.planned_count, data: { action: 'change->input#form' }, class: 'has-background-light has-text-centered', style: 'width: 50px; height: 26px' %>
+    <% end if production_plan %>
+    <%= button_to({ controller: 'production_plans', action: 'create', production_id: model.id }, params: { '[production_plan]scene_id': @produce_plan.scene_id, '[production_plan]produce_on': @produce_plan.produce_on }, class: 'ml-1') do %>
+      <i class="fa-solid fa-circle-plus fa-2x has-text-grey"></i>
+    <% end unless production_plan %>
+    <%= button_to({ controller: 'production_plans', action: 'update', production_id: model.id, id: production_plan.id }, method: :patch, params: { '[production_plan]planned_count': production_plan.planned_count + 1 }, class: 'ml-1') do %>
+      <i class="fa-solid fa-circle-plus fa-2x"></i>
+    <% end if production_plan %>
+  </div>
 </td>
