--- a/app/views/factory/admin/produce_plans/_products/_index_thead.html.erb
+++ b/app/views/factory/admin/produce_plans/_products/_index_thead.html.erb
@@ -1,5 +1,5 @@
 <th><%= Factory::Product.human_attribute_name(:name) %></th>
 <th><%= Factory::Production.human_attribute_name(:name) %></th>
 <th><%= Factory::Production.human_attribute_name(:price) %></th>
-<th><%= Factory::Product.human_attribute_name(:enabled) %></th>
+<th>计划数</th>
 <th></th>
