--- a/app/views/factory/admin/produce_plans/_products/_breadcrumb.html.erb
+++ b/app/views/factory/admin/produce_plans/_products/_breadcrumb.html.erb
@@ -1,7 +1,10 @@
 <div class="breadcrumb has-succeeds-separator">
   <ul>
     <li><%= link_to t('factory.admin.scenes.index.title'), { controller: 'scenes' } %></li>
-    <li class="is-active"><%= @scene.title %></li>
+    <li class="is-active">
+      <span><%= @scene.title %></span>
+      <span class="has-text-grey">（<%= @produce_plan.produce_on %>）</span>
+    </li>
     <li class="is-active"><%= t('.title') %></li>
   </ul>
 </div>
