--- a/app/views/factory/produce_plans/index.html+phone.erb
+++ b/app/views/factory/produce_plans/index.html+phone.erb
@@ -2,8 +2,8 @@
 <div class="weui-panel">
   <div class="weui-panel__hd">
     <span><%= extra_distance_date(Date.today, produce_on) %></span>
-    <span><%= produce_on %></span>
-    <span><%= produce_on.to_s(:week) %></span>
+    <span class="has-text-weight-normal has-text-grey is-size-7"><%= produce_on %></span>
+    <span class="has-text-weight-normal has-text-grey is-size-7"><%= produce_on.to_s(:week) %></span>
   </div>
   <div class="weui-panel__bd">
     <div class="columns is-multiline as-border is-flex m-0 p-4">
