--- a/app/views/factory/products/_dialog.html.erb
+++ b/app/views/factory/products/_dialog.html.erb
@@ -16,7 +16,7 @@
     <div class="weui-half-screen-dialog__hd__main">
       <div class="weui-half-screen-dialog__title">
         <span><%= extra_distance_date(Date.today, @produce_plan.produce_on) %></span>
-        <span><%= @produce_plan.produce_on %></span>
+        <span class="has-text-weight-normal has-text-grey is-size-7"><%= @produce_plan.produce_on %></span>
       </div>
     </div>
     <div class="weui-half-screen-dialog__hd__side">
