--- a/app/views/factory/admin/produce_plans/_products/_index_tbody.html.erb
+++ b/app/views/factory/admin/produce_plans/_products/_index_tbody.html.erb
@@ -21,6 +21,12 @@
   </div>
 </td>
 <td>
+  <%= form_with theme: nil, model: production_plan, url: { controller: 'production_plans', action: 'update', production_id: model.id, id: production_plan.id }, data: { controller: 'input' } do |f| %>
+    <%= f.check_box :specialty, data: { input_target: 'checkbox' }, id: nil, class: 'switch is-rounded' %>
+    <label data-action="click->input#check"></label>
+  <% end if production_plan %>
+</td>
+<td>
   <%= link_to({ controller: 'production_items', production_id: production_plan.production_id, production_plan_id: production_plan.id }, target: '_blank', class: 'button is-small is-rounded is-light') do %>
     <i class="fa-light fa-barcode-scan"></i>
     <span>生产明细</span>
