--- a/app/views/factory/admin/produce_plans/_products/_index_thead.html.erb
+++ b/app/views/factory/admin/produce_plans/_products/_index_thead.html.erb
@@ -2,4 +2,5 @@
 <th><%= Factory::Production.human_attribute_name(:name) %></th>
 <th><%= Factory::Production.human_attribute_name(:price) %></th>
 <th>计划数</th>
+<th><%= Factory::Production.human_attribute_name(:specialty) %></th>
 <th></th>
