--- a/app/views/factory/products/_index/_taxon.html.erb
+++ b/app/views/factory/products/_index/_taxon.html.erb
@@ -1,3 +1,6 @@
-<div data-controller="weui-dialog" id="dialog" style="display: none; opacity: 0">
-  <%= render 'dialog' %>
+<div data-controller="weui-dialog" id="dialog_produce_on" style="display: none; opacity: 0">
+  <%= render 'dialog_produce_on' %>
+</div>
+<div data-controller="weui-dialog" id="dialog_scene" style="display: none; opacity: 0">
+  <%= render 'dialog_scene' %>
 </div>
