--- a/app/views/factory/products/_index/_breadcrumb.html+phone.erb
+++ b/app/views/factory/products/_index/_breadcrumb.html+phone.erb
@@ -1,12 +1,18 @@
 <% if params[:produce_plan_id] %>
-<div class="box is-radiusless p-2 mb-0 is-border-bottom is-sticky" style="z-index: 3">
-  <span class="has-text-link has-text-weight-semibold" data-controller="weui-dialog" data-weui-dialog-id-value="dialog_scene" data-action="click->weui-dialog#toggle">
-    <span><%= @produce_plan.scene.title %></span>
-    <i class="fa-light fa-angle-right"></i>
+<div class="box is-radiusless p-2 mb-0 is-border-bottom is-flex is-justify-content-space-between is-sticky" style="z-index: 3">
+  <span data-controller="weui-dialog" data-weui-dialog-id-value="dialog_scene" data-action="click->weui-dialog#toggle">
+    <span class="has-text-weight-semibold"><%= @produce_plan.scene.title %></span>
+    <span class="has-text-link ">
+      <span>切换</span>
+      <i class="fa-light fa-angle-right pl-0"></i>
+    </span>
   </span>
-  <span class="has-text-link has-text-weight-semibold ml-4" data-controller="weui-dialog" data-weui-dialog-id-value="dialog_produce_on" data-action="click->weui-dialog#toggle">
-    <span><%= @produce_plan.produce_on %></span>
-    <i class="fa-light fa-angle-right"></i>
+  <span class="ml-4" data-controller="weui-dialog" data-weui-dialog-id-value="dialog_produce_on" data-action="click->weui-dialog#toggle">
+    <span class="has-text-weight-semibold"><%= @produce_plan.produce_on %></span>
+    <span class="has-text-link">
+      <span>切换</span>
+      <i class="fa-light fa-angle-right pl-0"></i>
+    </span>
   </span>
 </div>
 <% end %>
