--- a/app/views/factory/products/_dialog_produce_on.html.erb
+++ b/app/views/factory/products/_dialog_produce_on.html.erb
@@ -26,7 +26,7 @@
         <div>
           <i class="fa-solid fa-chevron-left has-text-grey"></i>
           <span>前一天</span>
-          <span class="has-text-grey is-size-7"><%= @produce_plan.produce_on - 1 %></span>
+          <span class="has-text-grey is-size-7">没有了</span>
         </div>
       <% end %>
       </div>
@@ -40,7 +40,7 @@
       <% else %>
         <div class="has-text-right">
           <span>后一天</span>
-          <span class="has-text-grey is-size-7"><%= @produce_plan.produce_on + 1 %></span>
+          <span class="has-text-grey is-size-7">没有了</span>
           <i class="fa-solid fa-chevron-right has-text-grey"></i>
         </div>
       <% end %>
