--- a/app/views/factory/admin/production_plans/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/production_plans/_index/_index_tbody.html.erb
@@ -1,8 +1,8 @@
 <td><%= model.scene&.title %></td>
 <td><%= model.produce_on %></td>
 <td>
-  <p><time data-controller="time"><%= model.start_at.to_s(:rfc822) if model.start_at %></time></p>
-  <p><time data-controller="time"><%= model.finish_at.to_s(:rfc822) if model.finish_at %></time></p>
+  <p><time data-controller="time"><%= model.start_at.to_s(:iso8601) if model.start_at %></time></p>
+  <p><time data-controller="time"><%= model.finish_at.to_s(:iso8601) if model.finish_at %></time></p>
 </td>
 <td><%= model.state_i18n %></td>
 <td>
