--- a/app/views/factory/produce_plans/_produce_plan.html.erb
+++ b/app/views/factory/produce_plans/_produce_plan.html.erb
@@ -1,7 +1,7 @@
 <%= link_to({ controller: '/factory/products', produce_plan_id: model.id }, class: 'column is-half-mobile has-text-grey') do %>
   <p class="is-size-7 has-text-centered">
     <span>预定截止：</span>
-    <span><%= extra_distance_date(Date.today, model.produce_on) %></span>
+    <span><%= extra_distance_date(model.produce_on) %></span>
     <time><%= model.scene.book_finish_at.to_s(:time) %></time>
   </p>
   <p class="is-size-7 has-text-centered">
