--- a/app/views/factory/products/_produce_plan.html.erb
+++ b/app/views/factory/products/_produce_plan.html.erb
@@ -3,7 +3,7 @@
   <p class="weui-grid__label <%= @produce_plan.scene_id == model.scene_id ? 'has-text-success' : 'has-text-grey' %>"><%= model.scene.title %></p>
   <p class="is-size-7">
     <span>预定截止：</span>
-    <time><%= extra_distance_date(Date.today, model.produce_on) %></time>
+    <time><%= extra_distance_date(model.produce_on) %></time>
     <time><%= model.scene.book_finish_at.to_s(:time) %></time>
   </p>
   <p class="is-size-7">
