--- a/app/views/factory/products/_index/_breadcrumb.html+phone.erb
+++ b/app/views/factory/products/_index/_breadcrumb.html+phone.erb
@@ -8,7 +8,10 @@
     </span>
   </span>
   <span class="ml-4" data-controller="weui-dialog" data-weui-dialog-id-value="dialog_produce_on" data-action="click->weui-dialog#toggle">
-    <span class="has-text-weight-semibold"><%= @produce_plan.produce_on %></span>
+    <span>
+      <span class="has-text-weight-semibold"><%= @produce_plan.produce_on %></span>
+      <span><%= @produce_plan.produce_on.to_s(:week) %></span>
+    </span>
     <span class="has-text-link">
       <span>切换</span>
       <i class="fa-light fa-angle-right pl-0"></i>
