--- a/app/views/factory/admin/trade_items/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/trade_items/_index/_index_tbody.html.erb
@@ -2,4 +2,4 @@
 <td><%= model.amount %></td>
 <td><%= model.note %></td>
 <td><%= model.extra %></td>
-<td><%= model.status %></td>
+<td><%= model.status_i18n %></td>
