--- a/app/views/factory/admin/produce_plans/_products/_index_tbody.html.erb
+++ b/app/views/factory/admin/produce_plans/_products/_index_tbody.html.erb
@@ -35,6 +35,6 @@
   <%= link_to({ controller: 'trade_items', production_id: production_plan.production_id, produce_on: production_plan.produce_on }, target: '_blank', class: 'button is-small is-rounded is-light') do %>
     <i class="fa-light fa-bag-shopping"></i>
     <span>订单明细</span>
-    <span class="has-text-grey">（<%= production_plan.production_items_count %>）</span>
+    <span class="has-text-grey">（<%= production_plan.trade_items_count %>）</span>
   <% end if production_plan %>
 </td>
