--- a/app/views/factory/admin/trade_items/_show_table.html.erb
+++ b/app/views/factory/admin/trade_items/_show_table.html.erb
@@ -16,5 +16,5 @@
 </tr>
 <tr>
   <td class="has-text-right"><%= Trade::TradeItem.human_attribute_name(:status) %></td>
-  <td><%= @trade_item.status %></td>
+  <td><%= @trade_item.status_i18n %></td>
 </tr>
