--- a/app/views/factory/admin/trade_items/_index/_index_tr.html.erb
+++ b/app/views/factory/admin/trade_items/_index/_index_tr.html.erb
@@ -5,6 +5,9 @@
       <%= link_to({ action: 'show', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-light fa-circle-info"></i>
       <% end %>
+      <%= button_to({ action: 'print', id: model.id }, method: :patch, data: { confirm: t('.confirm') }, aria: { label: t('.print') }, class: 'button is-small is-rounded is-light') do %>
+        <i class="fa-light fa-print"></i>
+      <% end %>
       <%= link_to({ action: 'edit', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.edit') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-light fa-pencil"></i>
       <% end %>
