add column vip price

--- a/app/views/factory/admin/productions/_index/_index_tbody.html+phone.erb
+++ b/app/views/factory/admin/productions/_index/_index_tbody.html+phone.erb
@@ -1,5 +1,5 @@
 <p class="weui-media-box__desc"><%= model.name %></p>
-<p class="weui-media-box__desc"><%= model.state %></p>
+<p class="weui-media-box__desc"><%= model.state_i18n %></p>
 <p class="weui-media-box__desc"><%= model.qr_code %></p>
 <p class="weui-media-box__desc"><%= model.cost_price.to_money.format(html_wrap: true).html_safe %></p>
 <p class="weui-media-box__desc"><%= model.profit_price.to_money.format(html_wrap: true).html_safe %></p>
