--- a/app/views/factory/admin/productions/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/productions/_index/_index_tbody.html.erb
@@ -16,7 +16,7 @@
     <% end %>
   </table>
 </td>
-<td><%= model.state %></td>
+<td><%= model.state_i18n %></td>
 <td><%= model.qr_code %></td>
 <td class="has-text-right">
   <p><%= model.cost_price.to_money.format(html_wrap: true).html_safe %></p>
