--- a/app/views/factory/productions/_production.html.erb
+++ b/app/views/factory/productions/_production.html.erb
@@ -16,4 +16,7 @@
     </ul>
     <div class="has-text-danger"><%= model.price.to_money.format(html_wrap: true).html_safe %></div>
   <% end %>
+  <div class="weui-media-box__ft is-align-items-flex-end pr-2 pb-4">
+    <%= render partial: 'cart', locals: { model: model } if current_cart %>
+  </div>
 </div>
