vip price admin

--- a/app/views/factory/admin/productions/_index/_index_thead.html.erb
+++ b/app/views/factory/admin/productions/_index/_index_thead.html.erb
@@ -6,6 +6,7 @@
   <p><%= Factory::Production.human_attribute_name(:profit_price) %></p>
 </th>
 <th><%= Factory::Production.human_attribute_name(:price) %></th>
+<th><%= Factory::Production.human_attribute_name(:vip_price) %></th>
 <th></th>
 <th><%= Factory::Production.human_attribute_name(:default) %></th>
 <th><%= Factory::Production.human_attribute_name(:enabled) %></th>
