--- a/app/views/factory/admin/productions/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/productions/_index/_index_tbody.html.erb
@@ -29,6 +29,11 @@
   <% end %>
 </td>
 <td>
+  <%= link_to({ action: 'vip', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('factory.admin.productions.vip.title') }, class: 'button is-small is-rounded is-light') do %>
+    <i class="fa-light fa-star"></i>
+  <% end %>
+</td>
+<td>
   <%= link_to({ action: 'part', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('factory.admin.products.part.title') }, class: 'button is-small is-rounded is-light') do %>
     <i class="fa-light fa-cube"></i>
   <% end %>
