--- a/app/views/factory/admin/productions/_vip_form.html.erb
+++ b/app/views/factory/admin/productions/_vip_form.html.erb
@@ -3,7 +3,7 @@
   <% @card_templates.each do |card_template| %>
     <%= f.fields :vip_price do |ef| %>
       <%= ef.text_field :code, value: card_template.code, readonly: true, index: card_template.id %>
-      <%= ef.number_field :price, step: 0.01, index: card_template.id %>
+      <%= ef.number_field :price, step: 0.01, value: @production.vip_price.fetch(card_template.code, @production.price), index: card_template.id %>
     <% end %>
   <% end %>
   <%= f.submit %>
