--- a/app/views/factory/productions/_production.html.erb
+++ b/app/views/factory/productions/_production.html.erb
@@ -16,8 +16,8 @@
     </ul>
     <div class="has-text-danger"><%= model.price.to_money.format(html_wrap: true).html_safe %></div>
     <div class="tags has-addons control m-0">
-      <div class="tag is-success">svip</div>
-      <div class="tag is-light"><%= model.vip_price.fetch('svip', model.price).to_money.format(html_wrap: true).html_safe %></div>
+      <div class="tag is-success"><%= current_cart.card.card_template.code %></div>
+      <div class="tag is-light"><%= model.vip_price.fetch(current_cart.card.card_template.code, model.price).to_money.format(html_wrap: true).html_safe %></div>
     </div>
   <% end %>
   <div class="weui-media-box__ft is-align-items-flex-end pr-2 pb-4">
