--- a/app/views/factory/productions/index.html.erb
+++ b/app/views/factory/productions/index.html.erb
@@ -1,15 +1,15 @@
 <%# render 'breadcrumb' %>
 <div class="cards">
-<% @products.each do |product| %>
+<% @productions.each do |production| %>
   <div class="card">
     <div class="card-image">
       <figure class="image is-1by1">
-        <%= image_tag product.logo %>
+        <%= image_tag production.product.logo %>
       </figure>
     </div>
     <div class="card-content">
-      <h2 class="title has-text-danger"><%= product.min_price %>~<%= product.max_price %></h2>
-      <%= link_to product.name, { action: 'show', id: product.id } %>
+      <h2 class="title has-text-danger"><%= production.price %></h2>
+      <%= link_to production.name, { action: 'show', id: production.id } %>
     </div>
   </div>
 <% end %>
