--- a/app/views/factory/produce_plans/_produce_plan.html.erb
+++ b/app/views/factory/produce_plans/_produce_plan.html.erb
@@ -11,7 +11,7 @@
     <time><%= model.scene.deliver_finish_at.to_s(:time) %></time>
   </p>
   <div class="is-flex is-justify-content-center">
-    <div class="button is-light mt-2">
+    <div class="button is-light mt-2 pl-0">
       <span class="icon">
         <%= image_tag model.scene.logo, class: 'image is-32x32' if model.scene.logo.attached? %>
       </span>
