--- a/app/views/factory/me/trade_items/_index/_index_tbody.html.erb
+++ b/app/views/factory/me/trade_items/_index/_index_tbody.html.erb
@@ -1,4 +1,7 @@
 <td><%= model.member.name %></td>
+<td>
+  <span><%= model.good.name %></span>
+</td>
 <td><%= model.number %></td>
 <td><%= model.amount %></td>
 <td><%= model.note %></td>
