--- a/app/views/factory/me/trade_items/_index/_index_thead.html.erb
+++ b/app/views/factory/me/trade_items/_index/_index_thead.html.erb
@@ -1,4 +1,5 @@
-<th><%= Trade::TradeItem.human_attribute_name(:user) %></th>
+<th><%= Trade::TradeItem.human_attribute_name(:member) %></th>
+<th><%= Trade::TradeItem.human_attribute_name(:good) %></th>
 <th><%= Trade::TradeItem.human_attribute_name(:number) %></th>
 <th><%= Trade::TradeItem.human_attribute_name(:amount) %></th>
 <th><%= Trade::TradeItem.human_attribute_name(:note) %></th>
