--- a/app/views/me/_factory_nav.html.erb
+++ b/app/views/me/_factory_nav.html.erb
@@ -2,5 +2,6 @@
   <span><%= t('factory.me.title') %></span>
 </div>
 <div class="menu-list">
-  <%= link_to t('factory.me.trade_items.index.title'), { controller: 'factory/me/trade_items' }, class: active_helper(controllers: ['trade_items'], active: 'is-active') %>
+  <%= link_to t('factory.me.trade_items.index.title'), { controller: 'factory/buy/carts' }, class: active_helper(controllers: ['carts'], active: 'is-active') %>
+  <%= link_to t('factory.me.trade_items.index.title'), { controller: 'factory/buy/trade_items' }, class: active_helper(controllers: ['trade_items'], active: 'is-active') %>
 </div>
